--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz",
+    "react-native-easy-grid": "^0.1.15",
     "react-native-elements": "^0.15.0",
     "react-redux": "^5.0.5",
     "react-router-native": "^4.1.1",
