--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": null,
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://localhost:5050",
   "dependencies": {
     "expo": "^19.0.0",
     "native-base": "^2.3.1",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "redux-thunk": "^2.2.0",
-    "remote-redux-devtools": "^0.5.12"
+    "remote-redux-devtools": "^0.5.12",
+    "superagent": "^3.5.2"
   }
 }
