--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": null,
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
-  "proxy": "http://localhost:5050",
   "dependencies": {
     "expo": "^19.0.0",
     "native-base": "^2.3.1",
@@ -21,5 +20,6 @@
     "redux-thunk": "^2.2.0",
     "remote-redux-devtools": "^0.5.12",
     "superagent": "^3.5.2"
-  }
+  },
+  "proxy": "http://localhost:5050"
 }
